--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,10 +26,15 @@
 				Best Pizzas by Stefano
 			</h1>
 			
+			<div class="text-center mb-3">
+				<form>
+					<label for="search">Search</label>
+					<input type="text" id="search" name="search">
+					<button type="submit">Go</button>
+				</form>
+			</div>
+			
 			<div class="w-75 m-auto my-cont border">
-				<div class="h-50">
-					
-				</div>
 				<div class="h-25 d-flex justify-content-center align-items-center">
 					<table class="table table-striped">
 					  <thead>
