--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -23,7 +23,7 @@
 		
 		<main>
 			<h1 class="text-center mt-5">
-				Title
+				Name
 			</h1>
 			
 			<div class="w-25 m-auto border-top border-start border-end">
