--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,10 @@
 				</form>
 			</div>
 			
+			<div class="text-center mb-3">
+				<a class="btn btn-success px-4" th:href="@{'/create'}">Add+</a>
+			</div>
+			
 			<div class="w-75 m-auto my-cont border">
 				<div class="h-25 d-flex justify-content-center align-items-center">
 					<table class="table table-striped">
