--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -37,36 +37,44 @@
 						<div>
 							<label for="name">Name</label>
 							<input type="text" id="name" th:field="*{name}">
-							<div th:if="${#fields.hasErrors('name')}" class="error-message" th:errors="*{name}">>
+							<div th:if="${#fields.hasErrors('name')}" class="error-message">
 								<ul>
-									<li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
+									<li th:each="err : ${#fields.errors('name')}">
+										<span class="text-danger" th:text="${err}"></span>
+									</li>
 								</ul>
 							</div>
 						</div>
 						<div>
 							<label for="descr">Description</label>
 							<input type="text" id="descr" th:field="*{description}">
-							<div th:if="${#fields.hasErrors('description')}" class="error-message" th:errors="*{description}">>
+							<div th:if="${#fields.hasErrors('description')}" class="error-message">>
 								<ul>
-									<li th:each="err : ${#fields.errors('description')}" th:text="${err}"></li>
+									<li th:each="err : ${#fields.errors('description')}">
+										<span class="text-danger" th:text="${err}"></span>
+									</li>
 								</ul>
 							</div>
 						</div>
 						<div>
 							<label for="img">Image URL</label>
 							<input type="text" id="img" th:field="*{image}">
-							<div th:if="${#fields.hasErrors('image')}" class="error-message" th:errors="*{image}">>
+							<div th:if="${#fields.hasErrors('image')}" class="error-message">
 								<ul>
-									<li th:each="err : ${#fields.errors('image')}" th:text="${err}"></li>
+									<li th:each="err : ${#fields.errors('image')}">
+										<span class="text-danger" th:text="${err}"></span>
+									</li>
 								</ul>
 							</div>
 						</div>
 						<div>
 							<label for="price">Price</label>
 							<input type="text" id="price" th:field="*{price}">
-							<div th:if="${#fields.hasErrors('price')}" class="error-message" th:errors="*{price}">>
+							<div th:if="${#fields.hasErrors('price')}" class="error-message">
 								<ul>
-									<li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
+									<li th:each="err : ${#fields.errors('price')}">
+										 <span class="text-danger" th:text="${err}"></span>
+									</li>
 								</ul>
 							</div>
 						</div>
