--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -32,53 +32,52 @@
         				<form
 							id="book-form"
 							th:object="${pizza}"
-							th:action="@{/pizzas/create}"
-							method="post">
-						<div>
-							<label for="name">Name</label>
-							<input type="text" id="name" th:field="*{name}">
-							<div th:if="${#fields.hasErrors('name')}" class="error-message">
-								<ul>
-									<li th:each="err : ${#fields.errors('name')}">
-										<span class="text-danger" th:text="${err}"></span>
-									</li>
-								</ul>
+							method="POST">
+							<div>
+								<label for="name">Name</label>
+								<input type="text" id="name" th:field="*{name}">
+								<div th:if="${#fields.hasErrors('name')}">
+									<ul>
+										<li th:each="err : ${#fields.errors('name')}">
+											<span class="text-danger" th:text="${err}"></span>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<div>
-							<label for="descr">Description</label>
-							<input type="text" id="descr" th:field="*{description}">
-							<div th:if="${#fields.hasErrors('description')}" class="error-message">>
-								<ul>
-									<li th:each="err : ${#fields.errors('description')}">
-										<span class="text-danger" th:text="${err}"></span>
-									</li>
-								</ul>
+							<div>
+								<label for="descr">Description</label>
+								<input type="text" id="descr" th:field="*{description}">
+								<div th:if="${#fields.hasErrors('description')}">
+									<ul>
+										<li th:each="err : ${#fields.errors('description')}">
+											<span class="text-danger" th:text="${err}"></span>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<div>
-							<label for="img">Image URL</label>
-							<input type="text" id="img" th:field="*{image}">
-							<div th:if="${#fields.hasErrors('image')}" class="error-message">
-								<ul>
-									<li th:each="err : ${#fields.errors('image')}">
-										<span class="text-danger" th:text="${err}"></span>
-									</li>
-								</ul>
+							<div>
+								<label for="img">Image URL</label>
+								<input type="text" id="img" th:field="*{image}">
+								<div th:if="${#fields.hasErrors('image')}">
+									<ul>
+										<li th:each="err : ${#fields.errors('image')}">
+											<span class="text-danger" th:text="${err}"></span>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<div>
-							<label for="price">Price</label>
-							<input type="text" id="price" th:field="*{price}">
-							<div th:if="${#fields.hasErrors('price')}" class="error-message">
-								<ul>
-									<li th:each="err : ${#fields.errors('price')}">
-										 <span class="text-danger" th:text="${err}"></span>
-									</li>
-								</ul>
+							<div>
+								<label for="price">Price</label>
+								<input type="text" id="price" th:field="*{price}">
+								<div th:if="${#fields.hasErrors('price')}">
+									<ul>
+										<li th:each="err : ${#fields.errors('price')}">
+											 <span class="text-danger" th:text="${err}"></span>
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<input class="mt-3 btn btn-success" type="submit" value="Save">
+							<input class="mt-3 btn btn-success" type="submit" value="Save">
 						</form>
     			   </div>
 				</ul>
