--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,13 @@
 						Best Pizzas
 					</a>
 				</h2>
+				<div>
+					<h2>
+						<a class="text-decoration-none" href="/ingredients">
+							Go to our ingredients
+						</a>
+					</h2>
+				</div>
 			</div>
 			<div class="p-5 flex-grow-1 border-bottom">
 				
